[gd_scene load_steps=3 format=3 uid="uid://lwejfvrvb402"]

[ext_resource type="FontFile" uid="uid://qrfyu0t3l5cu" path="res://assets/fonts/monogram.ttf" id="1_3a8iy"]
[ext_resource type="Script" path="res://scenes/UI/selection_menu/selection_menu.gd" id="1_i7tns"]

[node name="SelectionMenu" type="Node2D"]
script = ExtResource("1_i7tns")

[node name="Panel" type="Panel" parent="."]
offset_right = 62.0
offset_bottom = 79.0

[node name="Upgrade" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_right = 62.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("1_3a8iy")
theme_override_font_sizes/font_size = 16
text = "Upgrade"

[node name="Control" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_top = 26.0
offset_right = 62.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("1_3a8iy")
theme_override_font_sizes/font_size = 16
text = "Control"

[node name="MakeAuto" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_top = 52.0
offset_right = 62.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("1_3a8iy")
theme_override_font_sizes/font_size = 16
text = "Make Auto"

[connection signal="pressed" from="Panel/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Panel/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Panel/MakeAuto" to="." method="_on_make_auto_pressed"]
